Added information on adding custom localizations

--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -112,4 +112,71 @@ function MyApp({ Component, pageProps }: AppProps) {
 export default MyApp;
 ```
 
-To see the full list of localizations that you can override, see our [GitHub Repository](https://github.com/clerkinc/javascript/blob/main/packages/localizations/src/en-US.ts).
+To find the key for your translation (the `socialButtonsBlockButton` from the code example), open up our [English localization file](https://github.com/clerkinc/javascript/blob/main/packages/localizations/src/en-US.ts). Search the file for the term that you want to customize. 
+
+If you want to change the 'to continue to' string from the `<SignIn />` and `<SignUp />` components, you would search for 'to continue to'. You will find several instances of this. Some of those are in the the following `signUp` object:
+
+```json
+signUp: {
+    start: {
+      title: 'Create your account',
+      subtitle: 'to continue to {{applicationName}}',
+      actionText: 'Have an account?',
+      actionLink: 'Sign in',
+    },
+    emailLink: {
+      title: 'Verify your email',
+      subtitle: 'to continue to {{applicationName}}',
+      formTitle: 'Verification link',
+      formSubtitle: 'Use the verification link sent to your email address',
+      resendButton: "Didn't receive a link? Resend",
+      verified: {
+        title: 'Successfully signed up',
+      },
+      loading: {
+        title: 'Signing up...',
+      },
+      verifiedSwitchTab: {
+        title: 'Successfully verified email',
+        subtitle: 'Return to the newly opened tab to continue',
+        subtitleNewTab: 'Return to previous tab to continue',
+      },
+    },
+    emailCode: {
+      title: 'Verify your email',
+      subtitle: 'to continue to {{applicationName}}',
+      formTitle: 'Verification code',
+      formSubtitle: 'Enter the verification code sent to your email address',
+      resendButton: "Didn't receive a code? Resend",
+    },
+    phoneCode: {
+      title: 'Verify your phone',
+      subtitle: 'to continue to {{applicationName}}',
+      formTitle: 'Verification code',
+      formSubtitle: 'Enter the verification code sent to your phone number',
+      resendButton: "Didn't receive a code? Resend",
+    },
+    continue: {
+      title: 'Fill in missing fields',
+      subtitle: 'to continue to {{applicationName}}',
+      actionText: 'Have an account?',
+      actionLink: 'Sign in',
+    },
+  },
+```
+
+If you want to customize multiple from the SignUp, you would do something like: 
+
+```tsx
+const localization = {
+  signUp: {
+    start: {
+      subtitle: 'to access to {{applicationName}}',
+    },
+    emailCode: {
+      subtitle: 'to access to {{applicationName}}'
+    }
+  }
+};
+````
+
