Updated Signin and Signup examples, moved App Router first

--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -34,105 +34,104 @@ A successful sign-up consists of the following steps:
 <Tabs items={["Next.js","React","Remix", "Gatsby", "Expo", "JavaScript"]}>
 
 <Tab>
-<CodeBlockTabs options={['Pages Router', 'App Router']}>
-```tsx filename="pages/sign-up/[[...index]].tsx"
-import { useState } from "react";
-import { useSignUp } from "@clerk/nextjs";
-import { useRouter } from "next/router";
+<CodeBlockTabs options={['App Router', 'Pages Router']}>
+```tsx filename="app/sign-up/[[...sing-up]]/page.tsx
+'use client'
 
-export default function SignUpForm() {
-  const { isLoaded, signUp, setActive } = useSignUp();
-  const [emailAddress, setEmailAddress] = useState("");
-  const [password, setPassword] = useState("");
-  const [pendingVerification, setPendingVerification] = useState(false);
-  const [code, setCode] = useState("");
-  const router = useRouter();
-  // start the sign up process.
-  const handleSubmit = async (e) => {
-    e.preventDefault();
-    if (!isLoaded) {
-      return;
-    }
+import * as React from 'react'
+import { useSignUp } from '@clerk/nextjs'
+import { useRouter } from 'next/navigation'
+import { ClerkAPIErrorJSON } from '@clerk/types'
+
+export default function Page() {
+  const { isLoaded, signUp, setActive } = useSignUp()
+  const [emailAddress, setEmailAddress] = React.useState("")
+  const [password, setPassword] = React.useState("")
+  const [verifying, setVerifying] = React.useState(false)
+  const [loading, setLoading] = React.useState(false)
+  const [code, setCode] = React.useState("")
+  const [errors, setErrors] = React.useState<ClerkAPIErrorJSON[] | null>(null)
+  const router = useRouter()
+
+  const handleSubmit = async (e: React.FormEvent) => {
+    e.preventDefault()
+    setLoading(true)
+    if (!isLoaded) return
 
     try {
       await signUp.create({
-        emailAddress,
-        password,
-      });
+        emailAddress, password
+      })
 
-      // send the email.
-      await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
+      await signUp.prepareEmailAddressVerification({
+        strategy: 'email_code'
+      })
 
-      // change the UI to our pending section.
-      setPendingVerification(true);
-    } catch (err: any) {
-      console.error(JSON.stringify(err, null, 2));
+      setVerifying(true)
+      setLoading(false)
     }
-  };
-
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async (e) => {
-    e.preventDefault();
-    if (!isLoaded) {
-      return;
+    catch (err: any) {
+      console.error('Error:', JSON.stringify(err, null, 2))
+      setErrors(err.errors)
+      setLoading(false)
     }
+  }
+
+  const handleVerify = async (e: React.FormEvent) => {
+    e.preventDefault()
+    setLoading(true)
+    if (!isLoaded) return
 
     try {
       const completeSignUp = await signUp.attemptEmailAddressVerification({
-        code,
-      });
-      if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
-         or if the user needs to complete more steps.*/
-        console.log(JSON.stringify(completeSignUp, null, 2));
-      }
+        code
+      })
+
       if (completeSignUp.status === "complete") {
         await setActive({ session: completeSignUp.createdSessionId })
-        router.push("/");
       }
-    } catch (err: any) {
-      console.error(JSON.stringify(err, null, 2));
+      setLoading(false)
+      router.push("/")
     }
-  };
+    catch (err: any) {
+      setErrors(err.message)
+      setLoading(false)
+    }
+  }
+
+  if (verifying) {
+    return (
+      <form onSubmit={handleVerify}>
+        <label id="code">Code</label>
+        <input value={code} id="code" name="code" onChange={(e) => setCode(e.target.value)} />
+        <button type="submit">Complete Sign Up</button>
+      </form>
+    )
+  }
 
   return (
-    <div>
-      {!pendingVerification && (
-        <form>
-          <div>
-            <label htmlFor="email">Email</label>
-            <input onChange={(e) => setEmailAddress(e.target.value)} id="email" name="email" type="email" />
-          </div>
-          <div>
-            <label htmlFor="password">Password</label>
-            <input onChange={(e) => setPassword(e.target.value)} id="password" name="password" type="password" />
-          </div>
-          <button onClick={handleSubmit}>Sign up</button>
-        </form>
-      )}
-      {pendingVerification && (
-        <div>
-          <form>
-            <input
-              value={code}
-              placeholder="Code..."
-              onChange={(e) => setCode(e.target.value)}
-            />
-            <button onClick={onPressVerify}>
-              Verify Email
-            </button>
-          </form>
-        </div>
-      )}
-    </div>
-  );
+    <form onSubmit={handleSubmit}>
+      <div>
+        <label htmlFor="email">Email address</label>
+        <input id="email" type='email' name="email" value={emailAddress} onChange={(e) => setEmailAddress(e.target.value)} />
+      </div>
+      <div>
+        <label className="block text-sm mt-8" htmlFor="password">Password</label>
+        <input id="password" type='password' name="password" value={password} onChange={(e) => setPassword(e.target.value)} />
+      </div>
+      <div>
+        <button type="submit">Verify Email</button>
+      </div>
+    </form>
+
+  )
 }
-```
-```tsx filename="app/sign-up/[[...sign-up]].page.tsx"
-"use client"
+````
+```tsx filename="pages/sign-up/[[...index]].tsx"
+
 import { useState } from "react";
 import { useSignUp } from "@clerk/nextjs";
-import { useRouter } from "next/navigation";
+import { useRouter } from "next/router";
 
 export default function SignUpForm() {
   const { isLoaded, signUp, setActive } = useSignUp();
@@ -665,7 +664,7 @@ export default function SignUpScreen() {
                 const verify = await client.signUp.attemptEmailAddressVerification({
                     code
                 });
-                // user is created now set the session to active this never is not null.
+                // user isAp created now set the session to active this never is not null.
                 await setActive({session: verify.createdSessionId})
             }
 
@@ -690,67 +689,73 @@ In email/password authentication, the sign-in is a process that requires users t
 <Tabs items={["Next.js","React","Remix", "Gatsby", "Expo", "JavaScript"]}>
 
 <Tab>
-<CodeBlockTabs options={['Pages Router', 'App Router']}>
-```tsx filename="pages/sign-in/[[...index]].tsx"
-import { useState } from "react";
+<CodeBlockTabs options={['App Router', 'Pages Router']}>
+```tsx  filename="app/sign-in/[[...sign-in]].page.tsx"
+'use client'
+
+import * as React from "react";
 import { useSignIn } from "@clerk/nextjs";
-import { useRouter } from "next/router";
+import { useRouter } from "next/navigation";
 
 export default function SignInForm() {
   const { isLoaded, signIn, setActive } = useSignIn();
-  const [emailAddress, setEmailAddress] = useState("");
-  const [password, setPassword] = useState("");
+  const [email, setEmail] = React.useState("");
+  const [password, setPassword] = React.useState("");
   const router = useRouter();
-  // start the sign In process.
-  const handleSubmit = async (e) => {
+
+  // Handle the submission of the form
+  const handleSubmit = async (e: React.FormEvent) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the SIgn In process
     try {
       const result = await signIn.create({
-        identifier: emailAddress,
+        identifier: email,
         password,
       });
 
       if (result.status === "complete") {
-        console.log(result);
         await setActive({ session: result.createdSessionId });
         router.push("/")
       }
       else {
-        /*Investigate why the login hasn't completed */
+        // If the status is not complete, check why. User may need to 
+        // complete further steps.
         console.log(result);
       }
-
+      // Handle errors
     } catch (err: any) {
       console.error("error", err.errors[0].longMessage)
     }
   };
 
+  // Capture user email and password
   return (
     <div>
-      <form>
+      <form onSubmit={(e) => handleSubmit(e)}>
         <div>
           <label htmlFor="email">Email</label>
-          <input onChange={(e) => setEmailAddress(e.target.value)} id="email" name="email" type="email" />
+          <input onChange={(e) => setEmail(e.target.value)} id="email" name="email" type="email" value={email} />
         </div>
         <div>
           <label htmlFor="password">Password</label>
-          <input onChange={(e) => setPassword(e.target.value)} id="password" name="password" type="password" />
+          <input onChange={(e) => setPassword(e.target.value)} id="password" name="password" type="password" value={password} />
         </div>
-        <button onClick={handleSubmit}>Sign In</button>
+        <button type="submit">Sign In</button>
       </form>
     </div>
   );
 }
 ```
-```tsx filename="app/sign-in/[[...sign-in]].page.tsx"
-"use client"
+
+
+```tsx filename="pages/sign-in/[[...index]].tsx"
 import { useState } from "react";
 import { useSignIn } from "@clerk/nextjs";
-import { useRouter } from "next/navigation";
+import { useRouter } from "next/router";
 
 export default function SignInForm() {
   const { isLoaded, signIn, setActive } = useSignIn();
