feat: Add 'Script loading' troubleshooting doc

--- a/docs/troubleshooting/overview.mdx
+++ b/docs/troubleshooting/overview.mdx
@@ -13,7 +13,7 @@ Are you looking for a place to get started? Check out our [Quickstarts & Tutoria
 
 ## Discord community
 
-Need help? Have a suggestion? Join our [Discord community](https://discord.com/invite/b5rXHjAg7A) and never miss a thing.
+Need help? Have a suggestion? Join our [Discord community](https://clerk.com/discord) and never miss a thing.
 
 ## Support
 
