--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -165,7 +165,7 @@ signUp: {
   },
 ```
 
-If you want to customize multiple from the SignUp, you would do something like: 
+If you want to customize multiple from the SignUp, the procedure would resemble the following:: 
 
 ```tsx
 const localization = {
