Added missing import to signin example

--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -227,6 +227,7 @@ Let's see the above in action. If you want to learn more about sign-ins, check o
 
 import * as React from 'react'
 import { useSignIn } from "@clerk/nextjs";
+import { PhoneCodeFactor, SignInFirstFactor } from '@clerk/types';
 import { useRouter } from 'next/navigation';
 
 export default function Page() {
