--- a/docs/troubleshooting/script-loading.mdx
+++ b/docs/troubleshooting/script-loading.mdx
@@ -10,6 +10,7 @@ It sometimes might happen that Clerk doesn't successfully load and initialize du
 - You have no internet connection
 - The CDN which is used for the [ClerkJS script](/docs/references/javascript/overview#install-clerk-js-as-script) is offline or blocked
 - Another script is colliding with Clerk
+- Missing or invalid Publishable key
 
 Check your internet access and that e.g. no Ad-Blocker is blocking Clerk's scripts.
 
