--- a/docs/troubleshooting/script-loading.mdx
+++ b/docs/troubleshooting/script-loading.mdx
@@ -14,7 +14,7 @@ It sometimes might happen that Clerk doesn't successfully load and initialize du
 
 Check your internet access and that e.g. no Ad-Blocker is blocking Clerk's scripts.
 
-If Clerk stops working after you've added another script (e.g. through a React component), you can try delaying the loading of that other script. For example, to only load `@monaco-editor/react` after Clerk loaded you can use the [`useClerk()` hook](/docs/references/react/use-clerk#use-clerk):
+If Clerk stops working after you've added another script (e.g. through a React component), you can try delaying the loading of that other script. For example, to only mount `@monaco-editor/react` after Clerk loaded you can use the [`useClerk()` hook](/docs/references/react/use-clerk#use-clerk):
 
 ```jsx
 import { Editor } from "@monaco-editor/react";
