--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -78,18 +78,18 @@ export default MyApp;
 
 Our localizations are customer sourced and we encourage customers to add or update localizations. The process is:
 
-1. Fork the [https://github.com/clerkinc/javascript/](https://github.com/clerkinc/javascript/)
+1. Fork the [https://github.com/clerkinc/javascript/](https://github.com/clerkinc/javascript/) repo.
 2. Clone it locally to edit it.
 3. Review our [Contributing](https://github.com/clerkinc/javascript/blob/main/docs/CONTRIBUTING.md) guide.
 4. If you are updating an existing localization locate the file in `packages/localizations/src`
-5. If you are adding a new language copy the en-US.ts file and name it according to your language. The naming is language-region but abbreviated. For French in Canada it would ne fr-CA.ts.
+5. If you are adding a new language copy the en-US.ts file and name it according to your language. The naming is the abbreciated language-region. For French in Canada it would be fr-CA.ts.
 6. Go through the file and edit the entries.
-7. Add the language to to the `packages/localizations/src/index.ts` file.
-8. Commit your changes to bit, push them to your fork. Create a Pull Request from your fork to Clerk's repo againat the `main` branch. We will review and either approve or ask for updates.
+7. If you are adding a new localization, add the language to to the `packages/localizations/src/index.ts` file.
+8. Commit your changes to git, push them to your fork. Create a Pull Request from your fork to Clerk's repo againat the `main` branch. We will review and either approve or ask for updates.
 
 ## Custom localizations
 
-You can also provide your own localizations for the Clerk Components. This is useful if you want to provide localization for a language that Clerk doesn't currently support or if you want to change the wording to suit your brand.
+You can also provide your own localizations for the Clerk Components. This is useful if you want to provide limited or quick localization for a language that Clerk doesn't currently support or if you want to change the wording to suit your brand.
 
 ### Usage
 
@@ -112,7 +112,7 @@ function MyApp({ Component, pageProps }: AppProps) {
 export default MyApp;
 ```
 
-To find the key for your translation (the `socialButtonsBlockButton` from the code example), open up our [English localization file](https://github.com/clerkinc/javascript/blob/main/packages/localizations/src/en-US.ts). Search the file for the term that you want to customize. 
+To find the key for your translation (like the `socialButtonsBlockButton` from the code example), open up our [English localization file](https://github.com/clerkinc/javascript/blob/main/packages/localizations/src/en-US.ts). Search the file for the term that you want to customize. 
 
 If you want to change the 'to continue to' string from the `<SignIn />` and `<SignUp />` components, you would search for 'to continue to'. You will find several instances of this. Some of those are in the the following `signUp` object:
 
@@ -165,16 +165,16 @@ signUp: {
   },
 ```
 
-If you want to customize multiple from the SignUp, the procedure would resemble the following:: 
+If you want to customize multiple entries from the SignUp, the procedure would resemble the following:: 
 
 ```tsx
 const localization = {
   signUp: {
     start: {
-      subtitle: 'to access to {{applicationName}}',
+      subtitle: 'to access {{applicationName}}',
     },
     emailCode: {
-      subtitle: 'to access to {{applicationName}}'
+      subtitle: 'to access {{applicationName}}'
     }
   }
 };
