--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -25,7 +25,7 @@ To enable webhooks, go to the [Webhooks](https://dashboard.clerk.com/last-active
 You'll be presented with a form where you can specify the URL of your backend endpoint. This is the URL where Clerk will send the webhook events. You can also specify the events you want to receive. For example, if you only want to receive events related to users, you can select the **user** option.
 
 <Callout>
-If you are developing on your localhost, you will need to expose your endpoint to the internet to work with webhooks. See the [Testing the webhook](#testing-the-webhook) section for information on doing this.
+If you are developing on your localhost, you will need to expose your endpoint to the internet to work with webhooks. See the [Testing the webhook](#testing-the-webhook) section for information.
 </Callout>
 
 ![Add endpoint form](/docs/images/users/guides/sync-backend/webhook-form.png)
