--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -32,7 +32,7 @@ If you are developing on your localhost, you will need to expose your endpoint t
 
 Once you click the **Create** button, you'll be presented with your webhook endpoint dashboard. Here you can see the URL of your endpoint and the events you selected and you can also test your endpoint.
 
-### Signing Secret
+### Signing secret
 
 You will want to retrieve the Webhook signing secret from the Clerk Dashboard. You can find this in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. You will need to set this as an environment variable in your project. This code examples below use `WEBHOOK_SECRET` so you can use that, or use what you like and adjust the code examples.
 
