--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -76,7 +76,7 @@ export default MyApp;
 
 ## Adding or updating a localization 
 
-Our localizations are customer sourced and we encourage customers to add or update localizations. The process is:
+Our localizations are customer-sourced and we encourage customers to add or update localizations. To do so, follow these steps:
 
 1. Fork the [https://github.com/clerkinc/javascript/](https://github.com/clerkinc/javascript/) repo.
 2. Clone it locally to edit it.
