--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -84,7 +84,7 @@ Our localizations are customer-sourced and we encourage customers to add or upda
 4. If you are updating an existing localization locate the file in `packages/localizations/src`
 5. If you are adding a new language, copy the `en-US.ts` file and name it according to your language. The naming is the abbreviated language-region. For example, for French in Canada, it would be `fr-CA.ts.`
 6. Go through the file and edit the entries.
-7. If you are adding a new localization, add the language to to the `packages/localizations/src/index.ts` file.
+7. If you are adding a new localization, add the language to the `packages/localizations/src/index.ts` file.
 8. Commit your changes to git, push them to your fork. Create a Pull Request from your fork to Clerk's repo againat the `main` branch. We will review and either approve or ask for updates.
 
 ## Custom localizations
