--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -114,7 +114,7 @@ export default MyApp;
 
 To find the key for your translation (like the `socialButtonsBlockButton` from the code example below), open up our [English localization file](https://github.com/clerkinc/javascript/blob/main/packages/localizations/src/en-US.ts). Search the file for the term that you want to customize. 
 
-If you want to change the 'to continue to' string from the `<SignIn />` and `<SignUp />` components, you would search for 'to continue to'. You will find several instances of this. Some of those are in the the following `signUp` object:
+For example, if you want to change the 'to continue to' string from the `<SignIn />` and `<SignUp />` components, you would search for 'to continue to'. You will find several instances of this. Some of those are in the the following `signUp` object:
 
 ```json
 signUp: {
