--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -165,7 +165,7 @@ signUp: {
   },
 ```
 
-If you want to customize multiple entries from the SignUp, the procedure would resemble the following:: 
+If you want to customize multiple entries from the `<SignUp />` component, the procedure would resemble the following:
 
 ```tsx
 const localization = {
