--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -34,6 +34,7 @@ The `@clerk/localizations` package contains predefined localizations for the Cle
 *   uk-UA
 *   vi-VN
 *   zh-CN
+*   zh-TW
 
 ### Usage
 
@@ -73,9 +74,22 @@ function MyApp({ Component, pageProps }: AppProps) {
 export default MyApp;
 ```
 
+## Adding or updating a localization 
+
+Our localizations are customer-sourced and we encourage customers to add or update localizations. To do so, follow these steps:
+
+1. Fork the [https://github.com/clerkinc/javascript/](https://github.com/clerkinc/javascript/) repo.
+2. Clone it locally to edit it.
+3. Review our [Contributing](https://github.com/clerkinc/javascript/blob/main/docs/CONTRIBUTING.md) guide.
+4. If you are updating an existing localization locate the file in `packages/localizations/src`
+5. If you are adding a new language, copy the `en-US.ts` file and name it according to your language. The naming is the abbreviated language-region. For example, for French in Canada, it would be `fr-CA.ts.`
+6. Go through the file and edit the entries.
+7. If you are adding a new localization, add the language to the `packages/localizations/src/index.ts` file.
+8. Commit your changes to git and push them to your fork. Create a [Pull Request](https://github.com/clerkinc/clerk-docs/pulls) from your fork to Clerk's repo against the `main` branch. We will review and either approve or ask for updates.
+
 ## Custom localizations
 
-You can also provide your own localizations for the Clerk Components. This is useful if you want to provide localization for a language that Clerk doesn't currently support or if you want to change the wording to suit your brand.
+You can also provide your own localizations for the Clerk Components. This is useful if you want to provide limited or quick localization for a language that Clerk doesn't currently support or if you want to change the wording to suit your brand.
 
 ### Usage
 
@@ -98,4 +112,71 @@ function MyApp({ Component, pageProps }: AppProps) {
 export default MyApp;
 ```
 
-To see the full list of localizations that you can override, see our [GitHub Repository](https://github.com/clerkinc/javascript/blob/main/packages/localizations/src/en-US.ts).
+To find the key for your translation (like the `socialButtonsBlockButton` from the code example below), open up our [English localization file](https://github.com/clerkinc/javascript/blob/main/packages/localizations/src/en-US.ts). Search the file for the term that you want to customize. 
+
+For example, if you want to change the 'to continue to' string from the `<SignIn />` and `<SignUp />` components, you would search for 'to continue to'. You will find several instances of this. Some of those are in the the following `signUp` object:
+
+```json
+signUp: {
+    start: {
+      title: 'Create your account',
+      subtitle: 'to continue to {{applicationName}}',
+      actionText: 'Have an account?',
+      actionLink: 'Sign in',
+    },
+    emailLink: {
+      title: 'Verify your email',
+      subtitle: 'to continue to {{applicationName}}',
+      formTitle: 'Verification link',
+      formSubtitle: 'Use the verification link sent to your email address',
+      resendButton: "Didn't receive a link? Resend",
+      verified: {
+        title: 'Successfully signed up',
+      },
+      loading: {
+        title: 'Signing up...',
+      },
+      verifiedSwitchTab: {
+        title: 'Successfully verified email',
+        subtitle: 'Return to the newly opened tab to continue',
+        subtitleNewTab: 'Return to previous tab to continue',
+      },
+    },
+    emailCode: {
+      title: 'Verify your email',
+      subtitle: 'to continue to {{applicationName}}',
+      formTitle: 'Verification code',
+      formSubtitle: 'Enter the verification code sent to your email address',
+      resendButton: "Didn't receive a code? Resend",
+    },
+    phoneCode: {
+      title: 'Verify your phone',
+      subtitle: 'to continue to {{applicationName}}',
+      formTitle: 'Verification code',
+      formSubtitle: 'Enter the verification code sent to your phone number',
+      resendButton: "Didn't receive a code? Resend",
+    },
+    continue: {
+      title: 'Fill in missing fields',
+      subtitle: 'to continue to {{applicationName}}',
+      actionText: 'Have an account?',
+      actionLink: 'Sign in',
+    },
+  },
+```
+
+If you want to customize multiple entries from the `<SignUp />` component, the procedure would resemble the following:
+
+```tsx
+const localization = {
+  signUp: {
+    start: {
+      subtitle: 'to access {{applicationName}}',
+    },
+    emailCode: {
+      subtitle: 'to access {{applicationName}}'
+    }
+  }
+};
+````
+
