--- a/docs/authentication/social-connections/linkedin.mdx
+++ b/docs/authentication/social-connections/linkedin.mdx
@@ -5,7 +5,9 @@ description: Learn how to set up social connection with LinkedIn.
 
 # LinkedIn (Deprecated)
 
-This page is now deprecated. Please see the new [guide](/docs/authentication/social-connections/linkedin-oidc) on how to set up a social connection with LinkedIn.
+<Callout type="danger">
+  This page is now deprecated. Please see the new [guide](/docs/authentication/social-connections/linkedin-oidc) on how to set up a social connection with LinkedIn.
+</Callout>
 
 ## Overview
 
