fixed small typo

--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -52,7 +52,7 @@ CLERK_SECRET_KEY={{secret}}
 
 </InjectKeys>
 
-This examples uses `dontenv` to load the environment variables. You can use any other library or method, if you so wish.
+This examples uses `dotenv` to load the environment variables. You can use any other library or method, if you so wish.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ```bash filename="terminal"
