--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -56,18 +56,18 @@ This examples uses `dotenv` to load the environment variables. You can use any o
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ```bash filename="terminal"
-  npm install @dotenv
-  npm install -D types/dotenv
+  npm install dotenv
+  npm install -D @types/dotenv
   ```
 
   ```bash filename="terminal"
-  yarn add @clerk/fastify
-  yarn add -D types/dotenv
+  yarn add dotenv
+  yarn add -D @types/dotenv
   ```
 
   ```bash filename="terminal"
-  pnpm add @clerk/fastify
-  pnpm add -D types/dotenv
+  pnpm add dotenv
+  pnpm add -D @types/dotenv
   ```
 </CodeBlockTabs>
 
