--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -52,22 +52,22 @@ CLERK_SECRET_KEY={{secret}}
 
 </InjectKeys>
 
-This examples uses `dontenv` to load the environment variables. You can use any other library or method, if you so wish.
+This examples uses `dotenv` to load the environment variables. You can use any other library or method, if you so wish.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ```bash filename="terminal"
-  npm install @dotenv
-  npm install -D types/dotenv
+  npm install dotenv
+  npm install -D @types/dotenv
   ```
 
   ```bash filename="terminal"
-  yarn add @clerk/fastify
-  yarn add -D types/dotenv
+  yarn add dotenv
+  yarn add -D @types/dotenv
   ```
 
   ```bash filename="terminal"
-  pnpm add @clerk/fastify
-  pnpm add -D types/dotenv
+  pnpm add dotenv
+  pnpm add -D @types/dotenv
   ```
 </CodeBlockTabs>
 
