--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -186,6 +186,6 @@ The `useSignUp()` hook gives you access to the [`SignUp`](/docs/references/javas
 | Values | Descriptiom |
 | --- | --- |
 | `complete` | User has been created and custom flow can proceed to `setActive()` to create session. |
-| `abandoned` | ? |
+| `abandoned` | The SignUp attempt will be abandoned if it was started more than 24 hours before. |
 | `missing_requirements` | A requirement from the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) settings is missing. EG, in your Dashboard the Password setting is required but a password as not provided in the custom flow. |
 
