--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -663,7 +663,7 @@ export default function SignUpScreen() {
                 const verify = await client.signUp.attemptEmailAddressVerification({
                     code
                 });
-                // user isAp created now set the session to active this never is not null.
+                // User is created. Now, set the session to active. session is never null.
                 await setActive({session: verify.createdSessionId})
             }
 
