--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -55,6 +55,7 @@ export default function Page() {
 
   const handleSubmit = async (e: React.FormEvent) => {
     e.preventDefault()
+    // Once the sign-up form is submitted, it should be in a submission/loading state while the sign-up is being created.
     setLoading(true)
     if (!isLoaded) return
 
