--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -100,6 +100,7 @@ export default function Page() {
     }
   }
 
+  // Once the sign-up form was created, verifying was set to true and as a result, this verification form is presented to the user to input their verification code.
   if (verifying) {
     return (
       <form onSubmit={handleVerify}>
