--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -80,6 +80,7 @@ export default function Page() {
 
   const handleVerify = async (e: React.FormEvent) => {
     e.preventDefault()
+    // Once the verification form is submitted, it should be in a submission/loading state while the verification is being "attempted".
     setLoading(true)
     if (!isLoaded) return
 
