--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -35,7 +35,7 @@ A successful sign-up consists of the following steps:
 
 <Tab>
 <CodeBlockTabs options={['App Router', 'Pages Router']}>
-```tsx filename="app/sign-up/[[...sing-up]]/page.tsx
+```tsx filename="app/sign-up/[[...sign-up]]/page.tsx
 'use client'
 
 import * as React from 'react'
