--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -705,7 +705,7 @@ export default function SignInForm() {
   const [password, setPassword] = React.useState("");
   const router = useRouter();
 
-  // Handle the submission of the form
+  // Handle the submission of the sign-in form
   const handleSubmit = async (e: React.FormEvent) => {
     e.preventDefault();
     if (!isLoaded) {
