--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -16,7 +16,7 @@ function setSession(
 ): Promise<void>;
 ```
 
-<Callout type="info">
+<Callout type="danger">
   Deprecated in favor of [`setActive()`](#set-active).
 </Callout>
 
