--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -32,7 +32,11 @@ function getInvitations(params?: GetInvitationsParams): Promise<PaginatedResourc
 
 ## `getPendingInvitations()` (deprecated)
 
-Retrieves a list of organization invitations that have not yet been accepted. This method is deprecated in favor of [`getInvitations()`](#get-invitations).
+<Callout type="danger">
+  This method is deprecated in favor of [`getInvitations()`](#get-invitations).
+</Callout>
+
+Retrieves a list of organization invitations that have not yet been accepted. 
 
 ```typescript
 function getPendingInvitations(params?: GetPendingInvitationsParams): Promise<OrganizationInvitation[]>;
