--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -23,7 +23,7 @@ Retrieve the members of the currently active organization.
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
 | `role?` | `('admin' \| 'basic_member' \| 'guest_member')[]` | The roles of memberships that will be included in the response. |
 
-<Callout type="info">
+<Callout type="danger">
   `GetMembershipsParams` was recently updated to `GetMembersParams`. The `limit` and `offset` parameters are now deprecated.
 </Callout>
 
