clarify on deprecated content

--- a/docs/references/javascript/types/oauth-strategy.mdx
+++ b/docs/references/javascript/types/oauth-strategy.mdx
@@ -35,7 +35,7 @@ type OAuthStrategy = |
 | `oauth_discord` | `string` | Specify Discord as the verification OAuth provider. |
 | `oauth_twitter` | `string` | Specify Twitter as the verification OAuth provider. |
 | `oauth_twitch` | `string` | Specify Twitch as the verification OAuth provider. |
-| `oauth_linkedin` | `string` | This strategy is now deprecated in favor of `oauth_linkedin_oidc`. |
+| `oauth_linkedin` (deprecated) | `string` | This strategy is now deprecated in favor of `oauth_linkedin_oidc`. |
 | `oauth_linkedin_oidc` | `string` | Specify LinkedIn as the verification OAuth provider. |
 | `oauth_dropbox` | `string` | Specify Dropbox as the verification OAuth provider. |
 | `oauth_bitbucket` | `string` | Specify Bitbucket as the verification OAuth provider. |
