--- a/docs/references/nextjs/with-clerk-middleware.mdx
+++ b/docs/references/nextjs/with-clerk-middleware.mdx
@@ -5,7 +5,7 @@ description: The withClerkMiddleware wrapper allows Clerk to access session data
 
 # `withClerkMiddleware()`
 
-<Callout type="warning">
+<Callout type="danger">
   `withClerkMiddleware()` is Clerk's previous middleware API and will soon be deprecated. Please use [`authMiddleware()`](/docs/references/nextjs/auth-middleware) going forward.
 </Callout>
 
