--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -24,7 +24,7 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 | `username` | `string \| null` | The user's username. |
 | `imageUrl` | `string` | Holds the users profile image or avatar. |
 | `hasImage` | `boolean` | A getter boolean to check if the user has uploaded an image or one was copied from OAuth. Returns `false` if Clerk is displaying an avatar for the user. |
-| `profileImageUrl` | `string \| null` | The URL for the user's profile image.<br />**This property is deprecated** in favor of `image_url` |
+| `profileImageUrl` (deprecated) | `string \| null` | The URL for the user's profile image.<br />This property is deprecated in favor of `image_url`. |
 | `primaryEmailAddress` | [`EmailAddress`][email-ref] \| `null` | Information about the user's primary email address. |
 | `primaryEmailAddressId` | `string \| null` | The unique identifier for the `EmailAddress` that the user has set as primary. |
 | `emailAddresses` | [`EmailAddress[]`][email-ref] | An array of all the `EmailAddress` objects associated with the user. Includes the primary. |
@@ -71,7 +71,7 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `username` | `string` | The user's username. |
-| `password` | `string` | The user's password.<br />**This property is deprecated.** This will be removed in the next major version. Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#updatepassword) instead. |
+| `password` (deprecated) | `string` | The user's password.<br />This property is deprecated. This will be removed in the next major version. Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#update-password) instead. |
 | `firstName` | `string` | The user's first name. |
 | `lastName` | `string` | The user's last name. |
 | `primaryEmailAddressId` | `string` | The unique identifier for the [`EmailAddress`][email-ref] that the user has set as primary. |
