--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -127,7 +127,7 @@ If you have a `clerkClient` handle:
 - `clerkClient.secretKey = value;`
 - `clerkClient.serverApiUrl = value;`
 - `clerkClient.apiVersion = value;`
-- <Badge label='Deprecated'>`clerkClient.httpOptions = value;`</Badge>
+- `clerkClient.httpOptions = value;` (deprecated)
 
 If are using a sub-api handle and wish to change options on the (implicit) singleton `clerkClient` instance:
 
