Adding a guideline for ensuring tabs are grouped by platform

--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -108,10 +108,9 @@ clerk.users.updateMetadata("user_xyz", private_metadata: privateMetadata)
 
 You can retrieve the private metadata for a user by using the [`getUser`](/docs/references/backend/user/get-user) method. This method will return the `User` object which contains the private metadata.
 
-<CodeBlockTabs options={['cURL', 'Next.js App Router', 'Next.js Pages Router', 'Node', 'Go','Ruby']}>
-```bash filename="curl.sh"
-curl -XGET -H 'Authorization: CLERK_SECRET_KEY' -H "Content-type: application/json" 'https://api.clerk.com/v1/users/{user_id}'
-```
+<Tabs items={["Next.js", "Node", "cURL", "Go", "Ruby"]}>
+  <Tab>
+<CodeBlockTabs options={['App Router', 'Pages Router']}>
 
 ```ts filename="app/private/route.ts"
 import { NextResponse } from 'next/server';
@@ -137,7 +136,9 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
   res.status(200).json(user.privateMetadata);
 }
 ```
-
+</CodeBlockTabs>
+  </Tab>
+  <Tab>
 ```ts filename="private.ts"
 import { clerkClient } from "@clerk/clerk-sdk-node";
 
@@ -150,7 +151,13 @@ app.post('/updateStripe', (req, res) => {
 });
 
 ```
-
+  </Tab>
+  <Tab>
+```bash filename="curl.sh"
+curl -XGET -H 'Authorization: CLERK_SECRET_KEY' -H "Content-type: application/json" 'https://api.clerk.com/v1/users/{user_id}'
+```
+  </Tab>
+  <Tab>
 ```ts filename="private.go"
 var client clerk.Client
 
@@ -162,14 +169,17 @@ func GetUserMetadata(user *clerk.User, stripeCustomerID string) error {
 	}
 }
 ```
-
+  </Tab>
+  <Tab>
 ```ts filename="private.rb"
 // ruby json example with a private metadata and stripe id
 require 'clerk'
 clerk = Clerk::SDK.new(api_key: "your_clerk_secret_key")
 clerk.users.getUser("user_xyz")
 ```
-</CodeBlockTabs>
+  </Tab>
+
+</Tabs>
 
 ## Public metadata
 
