--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -14,7 +14,7 @@ This is a class that represents an organization. It's returned from the [`create
 | `id` | `string` | The unique identifier of the related organization. |
 | `name` | `string` | The name of the related organization. |
 | `slug` | `string \| null` | The organization slug. If supplied, it must be unique for the instance. |
-| `logoUrl` (deprecated) | `string \| null` | The full URL for the organization logo. (deprecated in favor of `imageUrl`) |
+| `logoUrl` (deprecated) | `string \| null` | Deprecated in favor of `imageUrl`. |
 | `imageUrl` | `string` | Holds the organization logo or default logo. |
 | `hasImage` | `boolean` | A getter boolean to check if the organization has an uploaded image. Returns `false` if Clerk is displaying an avatar for the organization. |
 | `membersCount` | `number` | The number of members the associated organization contains. |
