migrate github org name from clerkinc to clerk

--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -78,14 +78,14 @@ export default MyApp;
 
 Our localizations are customer-sourced and we encourage customers to add or update localizations. To do so, follow these steps:
 
-1. Fork the [https://github.com/clerkinc/javascript/](https://github.com/clerkinc/javascript/) repo.
+1. Fork the [https://github.com/clerk/javascript/](https://github.com/clerk/javascript/) repo.
 2. Clone it locally to edit it.
-3. Review our [Contributing](https://github.com/clerkinc/javascript/blob/main/docs/CONTRIBUTING.md) guide.
+3. Review our [Contributing](https://github.com/clerk/javascript/blob/main/docs/CONTRIBUTING.md) guide.
 4. If you are updating an existing localization locate the file in `packages/localizations/src`
 5. If you are adding a new language, copy the `en-US.ts` file and name it according to your language. The naming is the abbreviated language-region. For example, for French in Canada, it would be `fr-CA.ts.`
 6. Go through the file and edit the entries.
 7. If you are adding a new localization, add the language to the `packages/localizations/src/index.ts` file.
-8. Commit your changes to git and push them to your fork. Create a [Pull Request](https://github.com/clerkinc/clerk-docs/pulls) from your fork to Clerk's repo against the `main` branch. We will review and either approve or ask for updates.
+8. Commit your changes to git and push them to your fork. Create a [Pull Request](https://github.com/clerk/clerk-docs/pulls) from your fork to Clerk's repo against the `main` branch. We will review and either approve or ask for updates.
 
 ## Custom localizations
 
@@ -112,7 +112,7 @@ function MyApp({ Component, pageProps }: AppProps) {
 export default MyApp;
 ```
 
-To find the key for your translation (like the `socialButtonsBlockButton` from the code example below), open up our [English localization file](https://github.com/clerkinc/javascript/blob/main/packages/localizations/src/en-US.ts). Search the file for the term that you want to customize. 
+To find the key for your translation (like the `socialButtonsBlockButton` from the code example below), open up our [English localization file](https://github.com/clerk/javascript/blob/main/packages/localizations/src/en-US.ts). Search the file for the term that you want to customize. 
 
 For example, if you want to change the 'to continue to' string from the `<SignIn />` and `<SignUp />` components, you would search for 'to continue to'. You will find several instances of this. Some of those are in the the following `signUp` object:
 
