--- a/docs/references/go/overview.mdx
+++ b/docs/references/go/overview.mdx
@@ -8,13 +8,13 @@ description: Learn how to integrate Go into your Clerk application.
 Clerk's Go SDK is a thin wrapper over the Clerk Backend API. Add the following import statement:
 
 ```go
-import "github.com/clerkinc/clerk-sdk-go/clerk"
+import "github.com/clerk/clerk-sdk-go/clerk"
 ```
 
 Go doesn't automatically add the module. You can explicitly add it with:
 
 ```go
-$ go get github.com/clerkinc/clerk-sdk-go
+$ go get github.com/clerk/clerk-sdk-go
 ```
 
 ## `Clerk` client
