Added doc page for authenicateRequest() (#295)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -120,6 +120,7 @@ Session operations are exposed under `clerkClient.sessions`. The following metho
 - [`getSession()`](/docs/references/backend/sessions/get-session)
 - [`getSessionList()`](/docs/references/backend/sessions/get-session-list)
 - [`getToken()`](/docs/references/backend/sessions/get-token)
+- [`authenticateRequest()`](/docs/references/backend/sessions/authenticate-request)
 - [`verifySession()`](/docs/references/backend/sessions/verify-session)
 
 ### Delete
