--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -182,5 +182,5 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 | --- | --- |
 | `complete` | User has been signed in and custom flow can proceed to `setActive()` to create session. |
 | `needs_factor_one` | The First Factor verification is missing. One of `email_link`, `email_code`, `phone_code`, `web3_metamask_signature` or `oauth_provider` is required to verify user. See [First Factor](/docs/references/javascript/sign-in/first-factor) for details. |
-| `needs_factor_two` | The Second Factor verification is missing. The Second Factor is a optional step to provide additional verification and includes `phone_code` and `totp`. See [Second Factor](/docs/references/javascript/sign-in/second-factor) for details.|
+| `needs_factor_two` | The Second Factor verification is missing. The Second Factor is an optional step to provide additional verification and includes `phone_code` and `totp`. See [Second Factor](/docs/references/javascript/sign-in/second-factor) for details.|
 | `needs_identifier` | The unqiue identifier for the user was missing. | 
