--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -185,7 +185,7 @@ The `useSignUp()` hook gives you access to the [`SignUp`](/docs/references/javas
 
 | Values | Descriptiom |
 | --- | --- |
-| `complete` | User has been created and custom flow can proceed to `setActive()` to create session. |
+| `complete` | The user has been created and custom flow can proceed to `setActive()` to create session. |
 | `abandoned` | The SignUp attempt will be abandoned if it was started more than 24 hours previously. |
 | `missing_requirements` | A requirement from the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) settings is missing. EG, in your Dashboard the Password setting is required but a password as not provided in the custom flow. |
 
