Added new organizationDomain webhooks

--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -35,6 +35,12 @@ You can find the Webhook signing secret when you click on the endpoint you creat
 - `organizationMembership.deleted`
 - `organizationMembership.updated`
 
+### Orgnaization Domains
+
+- `organizationDomain.created`
+- `organizationDomain.deleted`
+- `organizationDomain.updated`
+
 ### Session
 
 - `session.created`
