Added changed from review

--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -3,9 +3,6 @@ title: Sync Clerk data to your backend with webhooks
 description: The recommended way to sync data between Clerk and your application's backend is via webhooks. In this guide you'll learn how to enable webhooks and how to set up your backend so that it is updated every time an event happens on your Clerk instance.
 ---
 
-import { Tab, Tabs, Steps, Callout } from 'nextra-theme-docs';
-import { CodeBlockTabs } from '@/components/CodeBlockTabs';
-
 # Sync Clerk data to your backend with webhooks
 
 A common set up for applications involves a frontend for customers to interact with a backend that includes a database. Since authentication and user management happens on Clerk's side, data eventually needs to reach the application's backend.
@@ -32,15 +29,30 @@ If you are developing on your localhost, you will need to expose your endpoint t
 
 Once you click the **Create** button, you'll be presented with your webhook endpoint dashboard. Here you can see the URL of your endpoint and the events you selected and you can also test your endpoint.
 
-### Signing secret
+### Add your Signing Secret to your .env.local file
 
-You will want to retrieve the Webhook signing secret from the Clerk Dashboard. You can find this in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. You will need to set this as an environment variable in your project. This code examples below use `WEBHOOK_SECRET` so you can use that, or use what you like and adjust the code examples.
 
-![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
+To retrieve your Webhook signing secret, click on the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) page in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com). 
+<Images
+  width={2000}
+  height={1125}
+  src="/images/users/guides/sync-backend/sign-secret.png"
+  alt="The Webhooks page in the Clerk Dashboard. There is a red arrow pointing to where the signing secret is located."
+/>
+You will need to set this value as an environment variable in your project. This guide uses `WEBHOOK_SECRET` as the key. However, you can set the key to whatever you like; just be sure to update the code examples.
+```env filename=".env.local"
+WEBHOOK_SECRET=your_signing_secret
+```
+
 
 ### Understanding the webhook payload
 
-The Clerk webhook events are sent as HTTP POST requests with a JSON body. All messages contain a `type` string, `id` string, and a `data` object, like this:
+The Clerk webhook events are sent as HTTP `POST` requests with a JSON body. All messages contain:
+- `data` - an object that holds information for the event's payload.
+- `object` - this is always `event`
+- `type` - the type of webhook event. See [Supported webhook events](/docs/integrations/webhooks#supported-webhook-events) for a full list.
+
+Below is an example of a webhook object with no payload:
 
 ```json
 {
@@ -48,11 +60,10 @@ The Clerk webhook events are sent as HTTP POST requests with a JSON body. All me
     // The event type specific payload will be here.
   },
   "object": "event",
-  "type": "user.created"
+  "type": "<event>"
 }
 ```
-
-To learn more about the payload structure, check out the [webhooks reference](/docs/integrations/webhooks).
+Additionally messages contain an `id` string in the headers. To learn more about the payload structure, check out the [webhooks reference](/docs/integrations/webhooks).
 
 ### Install the `Svix` package
 
@@ -289,7 +300,7 @@ app.post('/api/webhook', bodyParser.raw({ type: 'application/json' }), async fun
 
 </Tabs>
 
-### Adding your endpoint to Middleware
+### Add your endpoint to Middleware
 
 Your Route Handler must be made public or ignored by Middleware to allow the request to succeed. The following example will make any webhooks created under `app/api/webhooks/` public. See [authMiddleware](/docs/references/nextjs/auth-middleware) for more information.
 
@@ -306,10 +317,10 @@ export const config = {
     ```
 
 
-### Testing the webhook
+### Test the webhook
 
 To test a webhook locally, you can use a tool like [ngrok](https://ngrok.com/) or [localtunnel](https://localtunnel.github.io/www/) to expose your local server to the internet. You can then use the ngrok URL as the webhook URL in the Clerk Dashboard.
 
-If you are testing webhooks outside of your development, you can use our webhook test requests to test your webhook. You can find these in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard.
+If you are testing webhooks outside of your development, you can use our webhook test requests to test your webhook. You can find these by clicking on the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard, selecting the webhook endpoint you created and then the `Testing` tab. You can select an event from the 'Send Event' dropdown to see the example payload and to send a test message to your application.
 
 </Steps>
